<resources>
    <string name="app_name">Grafter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="new_to_grafter">New to Grafter?</string>
    <string name="create_account">Create Account</string>
    <string name="incorrect_username_or_password">Incorrect Username or Password!</string>
    <string name="grafter">Grafter</string>
    <string name="grafter_logo">Grafter Logo</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_type">Account type</string>
    <string name="home">Home</string>
    <string name="post_a_service">Post A Service</string>
    <string name="account">Account</string>

    <string-array name="account_types">
        <item>Customer</item>
        <item>Freelancer</item>

    </string-array>


</resources>
